@@ -70,3 +70,54 @@ PyMOL>count_atoms 1+2+3+4+5+6+7+8+9+10+11+12+13+14+15+16+17+18+19+20+21+22+23+24
  count_atoms: 5655 atoms
 PyMOL>print cmd.count_atoms("resi 1+2+3+4+5+6+7+8+9+10+11+12+13+14+15+16+17+18+19+20+21+22+23+24+25+26+27+28+29+30+31+32+33+34+35+36+37+38+39+40+41+42+43+44+45+46+47+48+49+50+51+52+53+54+55+56+57+58+59+60+61+62+63+64+65+66+67+68+69+70+71+72+73+74+75+76+77+78+79+80+81+82+83+84+85+86+87+88+89+90+91+92+93+94+95+96+97+98+99+100+101+102+103+104+105+106+107+108+109+110+111+112+113+114+115+116+117+118+119+120+121+122+123+124+125+126+127+128+129+130+131+132+133+134+135+136+137+138+139+140+141+142+143+144+145+146+147+148+149+150+151+152+153+154+155+156+157+158+159+160+161+162+163+164+165+166+167+168+169+170+171+172+173+174+175+176+177+178+179+180+181+182+183+184+185+186+187+195+196+197+198+199+200+201+202+203+204+205+206+207+208+209+210+211+212+213+214+215+216+217+218+219+220+221+222+223+224+225+226+227+228+229+230")
 5655
+PyMOL>dele all
+PyMOL>load dat/pept.pdb
+ CmdLoad: "dat/pept.pdb" loaded as "pept".
+PyMOL>load dat/tiny.pdb, model
+ Executive-Warning: name "model" collides with a selection language keyword.
+ CmdLoad: "dat/tiny.pdb" loaded as "model".
+PyMOL>load dat/small01.mol, test+me
+ ExecutiveLoad: "dat/small01.mol" loaded as "test+me", through state 1.
+PyMOL>load dat/small02.pdb, mymodel
+ CmdLoad: "dat/small02.pdb" loaded as "mymodel".
+PyMOL>load dat/small03.mol2, model2
+ ObjectMoleculeReadStr: read through molecule 1.
+ ObjectMoleculeReadStr: read through molecule 2.
+ ObjectMoleculeReadStr: read through molecule 3.
+ ObjectMoleculeReadStr: read through molecule 4.
+ ObjectMoleculeReadStr: read through molecule 5.
+ ObjectMoleculeReadStr: read through molecule 6.
+ ObjectMoleculeReadStr: read through molecule 7.
+ ObjectMoleculeReadStr: read through molecule 8.
+ ObjectMoleculeReadStr: read through molecule 9.
+ ObjectMoleculeReadStr: read through molecule 10.
+ ExecutiveLoad: "dat/small03.mol2" loaded as "model2", through state 16.
+PyMOL>count_atoms model
+Selector-Error: Misplaced ).
+Selector-Error: Malformed selection.
+( model )<--
+ count_atoms: -1 atoms
+PyMOL>count_atoms model model
+ count_atoms: 37 atoms
+PyMOL>count_atoms /model
+ count_atoms: 37 atoms
+PyMOL>count_atoms pept
+ count_atoms: 107 atoms
+PyMOL>count_atoms model model pept
+ count_atoms: 144 atoms
+PyMOL>count_atoms /model+pept
+ count_atoms: 144 atoms
+PyMOL>count_atoms /pept+model
+ count_atoms: 144 atoms
+PyMOL>count_atoms /test+\me
+ count_atoms: 36 atoms
+PyMOL>count_atoms /pept+model+test\+me
+ count_atoms: 180 atoms
+PyMOL>count_atoms test+me
+ count_atoms: 36 atoms
+PyMOL>count_atoms test+me model model
+ count_atoms: 73 atoms
+PyMOL>count_atoms mymodel
+ count_atoms: 36 atoms
+PyMOL>count_atoms model2
+ count_atoms: 389 atoms
